# ToDoAIAgent

./: .gitignore  README.md  pyproject.toml
src/todoaiagent/: config.py
src/todoaiagent/adapters/trello/: client.py  mapper.py  models.py
src/todoaiagent/agents/: config.py  todo_agent.py
src/todoaiagent/agents/factorys/: llm_factory.py
src/todoaiagent/agents/langchain/: models.py  tools.py
src/todoaiagent/agents/models/: dependencies.py  responses.py
src/todoaiagent/agents/prompts/: loader.py  system.py  todo_extraction_system.yaml  user.py
src/todoaiagent/domain/: models.py  ports.py
src/todoaiagent/pipelines/: create_todos_pipeline.py  run_human_interrupt_pipeline.py
src/todoaiagent/rest_interface/: http.py
src/todoaiagent/services/: audio_to_text.py  todo_service.py
src/todoaiagent/streamlit/: app.py
src/todoaiagent/types/: llm.py
